# titus-notes-ov

./: .gitignore  DESIGN.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_APPLIED.md  TRANSCRIPTION.md  UPDATER.md  build.sh  bump-version.sh  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: transcribe_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: codex_auth.rs  lib.rs  main.rs  mic_monitor.rs  recorder.rs  transcriber.rs
src/components/: ActionItemsPanel.tsx  Combobox.tsx  ConfirmDialog.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  NoteChat.tsx  ParticipantsField.tsx  ProjectChat.tsx  RichTextEditor.css  RichTextEditor.tsx  SearchModal.tsx  Sidebar.tsx  SummariesPanel.tsx  TagChips.tsx  TagInput.tsx
src/components/lexical/: ImageNode.tsx  ImagePastePlugin.tsx  InitialContentPlugin.tsx  MentionComponents.tsx  NoteSidePanel.tsx  SlashCommandPlugin.tsx  ToolbarPlugin.tsx
src/context/: AppContext.tsx
src/lib/: ai.ts  aiCore.ts  codex.ts  hyprnoteImport.ts  ollama.ts  openai.ts  recorderPrefs.ts  tags.ts
src/views/: CalendarView.tsx  Dashboard.tsx  NotesView.tsx  OrganogramaView.tsx  PeopleView.tsx  ProjectsView.tsx  SettingsView.tsx  TasksView.tsx
