[package]
name = "titus-notes"
version = "1.0.0"
description = "Titus Notes"
authors = ["Tito Garrido"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "titus_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
cpal = "0.15"
mp3lame-encoder = "0.2"
screencapturekit = { version = "7", features = ["macos_13_0"] }
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

# A decodificação de MP3 em build de dev (sem otimização) levava ~40 s para
# uma reunião de 30 min — com opt-level 3 nos crates do symphonia cai para
# poucos segundos, sem custo perceptível de build.
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-core]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
[profile.dev.package.symphonia-metadata]
opt-level = 3

